Fix letter spacing

--- a/styles/typography.css
+++ b/styles/typography.css
@@ -28,7 +28,7 @@
 
   --text-size-adjust: none;
 
-  --letter-spacing: -0.02em;
+  --letter-spacing: 0.1em;
 
   --p-margin: 0 1.4em 1.612em;
 
